tests/snapshots/addresses/group/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - addresses
    - group
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: path parameter address (Invalid address foo: foo)
