tests/snapshots/addresses/group/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - addresses
    - group
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <ADDRESS>

Usage: kermit addresses group <ADDRESS>

For more information, try '--help'.
