tests/snapshots/addresses/group/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - addresses
    - group
    - 1DrDyTr9RpRsQnDnXo2YRiPzPW4ooHX5LLoqXrqfMrpQH
---
success: true
exit_code: 0
----- stdout -----
{
  "group": 0
}

----- stderr -----
